# touchDirection

./: CMakeLists.txt  LICENSE  readme.md
include/: logger.h  touchhandler.h
src/: logger.cpp  main.cpp  touchhandler.cpp
